# Calculator

./: CMakeLists.txt  README.md
src/: Makefile  s21_smartcalc.c  s21_smartcalc.h
src/calculate/: calc_rpn.c  calculate_coordinates.c  convert_to_rpn.c  create_coordinate_file.c  parse_str.c  s21_calculate.h
src/gui/: calc.glade  common.css  deposit_calc_window.c  main_window.c
src/test/: test.c  test.h  test_calc_rpn.c  test_calculate_coordinates.c  test_convert_to_rpn.c  test_create_coordinate_file.c  test_parse_str.c
src/utils/: s21_utils.h  stack.c  utils.c
